GNOME Bugzilla – Bug 702502
[regression] mpeg2dec: gst_segment_to_stream_time: assertion `segment->format == format' failed
Last modified: 2013-07-11 08:03:18 UTC
No idea where this comes from, but it's a regression: $ G_DEBUG=fatal_warnings gst-launch-1.0 filesrc location= /home/tpm/bbcnews.m2t ! tsdemux ! mpegvideoparse ! mpeg2dec ! fakesink Setting pipeline to PAUSED ... Pipeline is PREROLLING ... Redistribute latency... (gst-launch-1.0:25213): GStreamer-CRITICAL **: gst_segment_to_stream_time: assertion `segment->format == format' failed Program received signal SIGTRAP, Trace/breakpoint trap.
+ Trace 232084
Thread 140737266902784 (LWP 25219)
$1 = {flags = GST_SEGMENT_FLAG_NONE, rate = 1, applied_rate = 1, format = GST_FORMAT_UNDEFINED, base = 0, offset = 0, start = 0, stop = 18446744073709551615, time = 0, position = 0, duration = 18446744073709551615, _gst_reserved = { 0x0, 0x0, 0x0, 0x0}} (gdb) print format $2 = GST_FORMAT_TIME
Sample file at http://people.freedesktop.org/~tpm/samples/bbcnews2.m2t
Created attachment 247093 [details] [review] videodecoder: Fix drop frame handling at startup In the unlikely case that the decoder drops a frame before the first input frame is outputted, use the input segment (since it wasn't carried over to the output segment yet)
I wonder what it is dropping though that it didn't drop before? The only change in this area is in the mpegvideoparse from what I remember, most notably: commit f1a6d84a6c4595a94c5654131a74b6a979f53a04 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed May 1 17:36:47 2013 +0100 mpegvideoparse: don't announce incomplete source caps Don't send any source caps yet if we're still in drop-buffers-until-we-get-a-sequence-header mode. Fixes transmuxing of many MPEG-TS/PS streams into formats which require things like width, height or codec_data on the input caps. Also fixes issues when using playbin with decoder sinks that want width/height etc. https://bugzilla.gnome.org/show_bug.cgi?id=695879
Comment on attachment 247093 [details] [review] videodecoder: Fix drop frame handling at startup Looks sensible, also there are at least 2 other bugs around this problem that might be related or the same or something completely different causing it :)
The other bugs being bug #701391, bug #699972 and bug #700537
I got this error when trying to transcode from DVD in Transmageddon. Applying the patch makes the error go away.
commit 65624afd8f454986d90fe56337589a24cdddd9ca Author: Edward Hervey <edward@collabora.com> Date: Mon Jun 17 08:58:13 2013 +0200 videodecoder: Fix drop frame handling at startup In the unlikely case that the decoder drops a frame before the first input frame is outputted, use the input segment (since it wasn't carried over to the output segment yet) https://bugzilla.gnome.org/show_bug.cgi?id=702502
Did anyone look at why it is dropping stuff now that it didn't drop before?
We have made some changes in the segment handling code, so maybe that was the source.
*** Bug 699972 has been marked as a duplicate of this bug. ***